examples/test/testpolicy10652.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10652
  namespace: namespace436
spec:
  podSelector:
    matchLabels:
      key6: value47
      key2: value4
      key25: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value35
          key16: value23
      podSelector:
        matchLabels:
          key17: value46
